--- a/style.css
+++ b/style.css
@@ -13,9 +13,12 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    background-image: url(./Rectangle.png);
-    background-size: cover; 
-    background-position: center; 
+    background-image: 
+        url('./Combined Shape.png'), 
+        url('./Rectangle.png'); 
+    background-size: cover, cover; 
+    background-position: center, center; 
+    background-repeat: no-repeat, no-repeat;
 }
 header {
     width: 100%;
@@ -38,7 +41,7 @@ main {
     justify-content: center;
 }
 .timer {
-    width: 55%;
+    width: 60%;
     height: 185px;
     display: flex;
     justify-content: space-between;
@@ -52,7 +55,7 @@ main {
     justify-content: space-between;
 }
 .number {
-    width: 148px;
+    width: 100%;
     height: 150px;
     display: flex;
     align-items: center;
@@ -81,8 +84,45 @@ footer {
     background-image: url(./Group\ 5.png);
     background-repeat: no-repeat;
     background-position: bottom center; 
+    background-size: 100% auto;
 }
 .social-media {
     height: 120px;
+}
+.icons {
     cursor: pointer;
+}
+@media (max-width: 1110px) {
+    .header-text {
+        font-size: 18px;
+        letter-spacing: 6.136px;
+    }
+    .timer {
+        width: 60%;
+        height: 94px;
+    }
+    .time-box {
+        width: 70px;
+        height: 93px;
+    }
+    .number {
+        height: 71px;
+        font-size: 36px;
+        letter-spacing: -1.08px
+    }
+    .time-box p {
+        font-size: 7px;
+        letter-spacing: 2.959px;
+    }
+    footer {
+        background-size: auto;
+    }
+}
+@media (max-width: 600px) {
+    .header-text {
+        width: 327px;
+    }
+    .timer {
+        width: 90%;
+    }
 }
